--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "babel-node index.js --exec",
     "dev": "nodemon index.js --exec babel-node"
   },
   "keywords": [],
@@ -19,5 +19,9 @@
     "express-promise-router": "^4.1.0",
     "mongoose": "^6.0.1",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "14.17.4",
+    "npm": "6.14.14"
   }
 }
